--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url("https://fonts.googleapis.com/css?family=Rubik:700,900i");
 body {
   background-color: #000;
   font-family: "Open Sans";
@@ -114,94 +115,134 @@ main {
   padding: 0.9375rem;
 }
 
-.card-wrap {
-  margin: 10px;
-  -webkit-transform: perspective(800px);
-  transform: perspective(800px);
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  cursor: pointer;
-}
-
-.card-wrap:hover .card-bg {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  -o-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.card-wrap:hover .card {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  -o-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
 .card {
-  position: relative;
-  width: 100%;
+  cursor: pointer;
+  border-radius: 0.75rem;
+  border: 2px solid #FFF;
   padding-bottom: 150%;
-  background-color: #333;
-  overflow: hidden;
-  border-radius: 0.625rem;
-  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  -o-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-
-.card p {
-  line-height: 1.5em;
-}
-
-.card .h1 + p, .card p + p {
-  margin-top: 0.625rem;
-}
-
-.card-bg {
-  opacity: 0.5;
-  position: absolute;
-  top: -1.25rem;
-  left: -1.25rem;
-  width: calc(100% + 2.5rem);
-  height: calc(100% + 2.5rem);
-  padding: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  -o-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  pointer-events: none;
-}
-
-.card-info {
-  padding: 20px;
-  position: absolute;
-  bottom: 0;
-  color: #fff;
-}
-
-.card-info * {
   position: relative;
-  z-index: 1;
+  background-image: url(./images/bgCard.jpg);
+  background-size: auto 100%;
+  background-repeat: repeat-x;
+  background-position: left center;
+  -webkit-transition: all 350ms cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: all 350ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 350ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.card-info:after {
-  content: '';
+.card:hover {
+  -webkit-transition: all 350ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  -o-transition: all 350ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: all 350ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  -webkit-animation: bgAnimate 75000s infinite;
+  animation: bgAnimate 75000s infinite;
+}
+
+.card .number {
+  height: 2.375rem;
+  width: 2.375rem;
+  position: absolute;
+  z-index: 1;
+  right: -0.3125rem;
+  top: -0.3125rem;
+  background-color: #000;
+  border-radius: 50%;
+  line-height: 1;
+  border: 2px solid #00c6ff;
+  font-family: "Rubik";
+  font-weight: bold;
+  padding: 0.5625rem 0;
+  text-align: center;
+}
+
+.card .number i {
+  display: block;
+  margin-left: -0.125rem;
+  font-size: 1.0625rem;
+}
+
+.card .title {
+  font-family: "Rubik";
+  font-weight: bold;
+  font-size: 1.625rem;
+  line-height: 1;
+  display: block;
+  margin-top: 0.75rem;
+}
+
+.card .text {
+  font-size: 0.75rem;
+  line-height: 1.4;
+  display: block;
+  margin-top: 0.3125rem;
+}
+
+.card .text b {
+  margin-bottom: 0.1875rem;
+  display: block;
+}
+
+.card .bg {
+  overflow: hidden;
+  padding-bottom: 120%;
+  height: 0;
+  position: relative;
+  border-radius: 0.5rem;
+  border: 1px solid #000;
+}
+
+.card .bg .tilt {
+  width: 120%;
+  height: 120%;
+  position: absolute;
+  left: -10%;
+  top: -10%;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.card .bg .tilt__front {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
+}
+
+.card .bg .tilt__back {
+  position: relative;
+}
+
+.card .bg .tilt__back, .card .bg .tilt__front {
   width: 100%;
   height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.6)));
-  background-image: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
-  background-image: -o-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
-  background-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
-  background-blend-mode: overlay;
-  opacity: 0;
-  -webkit-transform: translateY(100%);
-  -ms-transform: translateY(100%);
-  transform: translateY(100%);
-  -webkit-transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  -o-transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.card .inset {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  right: 1rem;
+  bottom: 1rem;
+}
+
+@-webkit-keyframes bgAnimate {
+  0% {
+    background-position: 0% center;
+  }
+  100% {
+    background-position: 1000000% center;
+  }
+}
+
+@keyframes bgAnimate {
+  0% {
+    background-position: 0% center;
+  }
+  100% {
+    background-position: 1000000% center;
+  }
 }
