--- a/main.scss
+++ b/main.scss
@@ -188,7 +188,10 @@ main{
 		.tilt__back {
 			position: relative;
 		}
+
 		.tilt__back, .tilt__front {
+
+			transition: all 1s $returnEasing;
 			width: 100%;
 			height: 100%;
 			background-position: 50% 50%;
@@ -196,6 +199,12 @@ main{
 			background-size: cover;
 			-webkit-backface-visibility: hidden;
 			backface-visibility: hidden;
+		}
+	}
+	&:hover .bg {
+		.tilt__back, .tilt__front {
+
+			transition: none
 		}
 	}
 
