--- a/main.scss
+++ b/main.scss
@@ -5,6 +5,8 @@
 // 	font-weight: 700;
 // }
 
+$maxCardNumber : 500;
+
 $hoverEasing: cubic-bezier(0.23, 1, 0.32, 1);
 $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 $mediaBreak: 599px;
@@ -22,7 +24,17 @@ body{
 	background-color: #000;
 	font-family: "Open Sans";
 	color: #FFF;
-	padding-top: calculateRem(136px);
+	// padding-top: calculateRem(136px);
+}
+
+#clear-all {
+	position: fixed;
+	bottom: calculateRem(20px);
+	left: calculateRem(20px);
+	padding: calculateRem(10px);
+	background: #000;
+	border: 1px solid red;
+	color: red;
 }
 
 header{
@@ -38,11 +50,21 @@ header{
 	top: 0;
 	// height: calculateRem(136px);
 
+	.mobile-icon {
+		fill: #FFF;
+		height: calculateRem(40px);
+		width: calculateRem(40px);
+		
+		&.git-ico{
+			width: calculateRem(30px);
+			height: calculateRem(30px);
+			margin: 5px;
+		}
+	}
+
 	.item {
-		width: #{100%/3};
-		@media(max-width: $mediaBreak){
-			width: 100%;
-			order: 1;
+		@media(min-width: #{$mediaBreak+1}){
+			width: #{100%/3};
 		}
 	}
 
@@ -50,19 +72,17 @@ header{
 		max-width: 100%;
 		width: calculateRem(300px);
 		@media(max-width: $mediaBreak){
-			width: auto;
-			height: calculateRem(70px);
+			width: calculateRem(150px);
+			// height: calculateRem(70px);
 		}
 		margin: 0 auto;
 		display: block;
 	}
 	
 	.item-a {
-		width: #{100%/3};
 		position: relative;
-		@media(max-width: $mediaBreak){
-			width: auto;
-			order: 2;
+		@media(min-width: #{$mediaBreak+1}){
+			width: #{100%/3};
 		}
 		a{
 			color: rgba(255,255,255,.85);
@@ -71,9 +91,13 @@ header{
 			font-weight: 700;
 			text-transform: uppercase;
 			padding: calculateRem(10px) calculateRem(20px);
+			@media(max-width: $mediaBreak){
+				padding-top: 0;
+				padding-bottom: 0;
+			}
 			letter-spacing: .025em;
 			line-height: 1;
-				transition: all .6s $hoverEasing;
+			transition: all .6s $hoverEasing;
 
 			&:not(.effect-duplicate){
 				opacity: 0;
@@ -162,7 +186,7 @@ main{
 		font-family: "Rubik";
 		font-weight: bold;
 		font-size: calculateRem(26px);
-		line-height: 1;
+		line-height: 0.9;
 		display: block;
 		margin-top: calculateRem(12px);
 	}
@@ -247,4 +271,75 @@ main{
 	100% {
 		background-position: 1000000% center;
 	}
+}
+
+@media(min-width: #{$mediaBreak + 1}){
+	.mobile{
+		display: none;
+	}
+}
+@media(max-width: $mediaBreak){
+	.desktop{
+		display: none;
+	}
+}
+
+@for $card from 1 through $maxCardNumber {
+	#card-#{$card} {
+		order: #{$card};
+	}
+}
+
+.md-modal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 50%;
+	max-width: calculateRem(630px);
+	min-width: calculateRem(320px);
+	height: auto;
+	z-index: 2000;
+	visibility: hidden;
+	backface-visibility: hidden;
+	transform: translateX(-50%) translateY(-50%);
+	perspective: 1300px;
+
+	.md-content {
+		color: #fff;
+		background: #e74c3c;
+		position: relative;
+		border-radius: 3px;
+		margin: 0 auto;
+		transform-style: preserve-3d;
+		transform: rotateX(-70deg);
+		transition: all 0.3s;
+		opacity: 0;
+	}
+
+	&.md-show {
+		visibility: visible;
+
+		.md-content {
+			transform: rotateX(0deg);
+			opacity: 1;
+		}
+		~ .md-overlay {
+			opacity: 0.75;
+			visibility: visible;
+		}
+	}
+
+}
+
+.md-overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	visibility: hidden;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	opacity: 0;
+	background-color: #000;
+	transition: all 0.3s;
 }
