--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@
 @import 'reset';
 
 html, body{
-	height: 100%;
+	// height: 100%;
 	position: relative;
 	font-family: "Open Sans";
 	color: #FFF;
@@ -25,7 +25,7 @@ body{
 	right: 0;
 	z-index: -1;
 	// background-color: rgba($blue-bg, .5);
-	background-color: rgba(16, 2, 41, 0.7);
+	background-color: rgba(16, 2, 41, 0.2);
 }
 
 .video-bg{
@@ -41,12 +41,13 @@ body{
 }
 
 header{
-	width: $header-width;
+	// width: $header-width;
 	height: 100%;
 	position: fixed;
 	background-color: rgba(#000, 0.35);
 	z-index: 10;
 	padding: rem(20px) rem(15px);
+	display: none;
 }
 
 .logo{
@@ -63,18 +64,18 @@ header{
 
 main{
 	position: relative;
-	margin-left: $header-width;
-	width: calc(100% - $header-width);
-	height: 100%;
+	// margin-left: $header-width;
+	// width: calc(100% - $header-width);
+	// height: 100%;
 }
 
 .grid{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, $card-width);
 	grid-auto-columns: $card-width;
-	grid-gap: rem(20px);
+	grid-gap: rem(30px);
 	justify-content: center;
-	padding: rem(20px);
+	padding: rem(30px);
 }
 
 .card{
@@ -129,10 +130,10 @@ main{
 			border: 1px solid rgba(0, 0, 0, 0.25);
 			.bg-img{
 				position: absolute;
-				top: calc(-1 * 5px);
-				left: calc(-1 * 10px);
-				width: calc(100% + 10px * 2);
-				height: calc(100% + 5px * 2);
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
 				background-repeat: no-repeat;
 				background-position: 50% 0;
 				background-color: transparent;
@@ -150,19 +151,20 @@ main{
 		height: rem(33px);
 		width: rem(33px);
 		position: absolute;
-		z-index: 1;
-		right: rem(10px);
-		top: rem(10px);
-		background-color: #000;
+		z-index: 10;
+		right: rem(8px);
+		top: rem(8px);
+		background-color: $yellow;
 		border-radius: 50%;
 		line-height: 1;
-		border: 2px solid #00c6ff;
+		border: 2px solid #dc0000;
 		font-family: "Rubik";
 		font-weight: bold;
 		padding: rem(8px) 0;
 		text-align: center;
 
 		i{
+			color: #dc0000;
 			display: block;
 			font-style: normal;
 			letter-spacing: -1px;
@@ -173,7 +175,7 @@ main{
 	.title{
 		font-family: "Rubik";
 		font-weight: bold;
-		font-size: rem(20px);
+		font-size: rem(18px);
 		line-height: 1;
 		display: block;
 		margin-top: rem(15px);
@@ -187,7 +189,6 @@ main{
 	}
 	.episode{
 		font-size: rem(10px);
-		margin-bottom: rem(5px);
 		display: block;
 	}
 	// glitch
@@ -220,6 +221,10 @@ main{
 			}
 		}
 		.bg-img{
+			top: calc(-1 * 5px);
+			left: calc(-1 * 10px);
+			width: calc(100% + 10px * 2);
+			height: calc(100% + 5px * 2);
 			background-blend-mode: none;
 			&:nth-child(2) {
 				background-color: transparent;
@@ -248,6 +253,43 @@ main{
 				animation-iteration-count: infinite;
 				opacity: 0;
 			}
+		}
+	}
+	// poster
+	&.card-type-2{
+		// border-color: #000;
+		.bg{
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			border: 0;
+		}
+		.caption{
+			position: absolute;
+			z-index: 1;
+			padding: 15px;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			top: 0;
+			background-color: rgba(12, 3, 45, 0.6);
+			opacity: 0;
+			visibility: hidden;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-end;
+			transition: all 350ms ease;
+		}
+		&:hover .caption{
+			opacity: 1;
+			visibility: visible;
+		}
+	}
+	&.card-type-3{
+		.inset{
+			// background-image: url(../img/card-bg-3.png);
 		}
 	}
 }
