--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,7 +80,7 @@ main{
 
 .card{
 	border-radius: rem(12px);
-	border: rem(3px) solid $color-wine;
+	border: $border-card solid $color-wine;
 	padding-bottom: 145%;
 	position: relative;
 	overflow: hidden;
@@ -88,7 +88,7 @@ main{
 	margin: 0;
 
 	.inset{
-		background-image: url(../img/card-bg.png);
+		background-image: url(../img/bg/card-bg.png);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
@@ -97,6 +97,7 @@ main{
 		left: 0;
 		right: 0;
 		bottom: 0;
+		box-shadow: inset 0 0 8px 2px rgba($color-wine, .3);
 	}
 	&.card-empty{
 		// opacity: 0.4;
@@ -179,17 +180,20 @@ main{
 		line-height: 1;
 		display: block;
 		margin-top: rem(15px);
-		margin-bottom: rem(12px);
 		color: $yellow;
 	}
 	.location{
+		margin-top: rem(10px);
 		font-size: rem(12px);
 		display: block;
 		font-weight: bold;
+		line-height: 1.1;
 	}
 	.episode{
+		margin-top: rem(6px);
 		font-size: rem(10px);
 		display: block;
+		line-height: 1.1;
 	}
 	// glitch
 	&.card-type-1{
@@ -204,7 +208,7 @@ main{
 				color: $yellow;
 				background: black;
 				overflow: hidden;
-				clip: rect(0, 900px, 0, 0); 
+				clip: rect(0, #{rem(900px)}, 0, 0); 
 				animation: noise-anim 2s infinite linear alternate-reverse;
 			}
 			&::before{
@@ -216,15 +220,15 @@ main{
 				color: $yellow;
 				background: black;
 				overflow: hidden;
-				clip: rect(0, 900px, 0, 0); 
+				clip: rect(0, #{rem(900px)}, 0, 0); 
 				animation: noise-anim-2 3s infinite linear alternate-reverse;
 			}
 		}
 		.bg-img{
-			top: calc(-1 * 5px);
-			left: calc(-1 * 10px);
-			width: calc(100% + 10px * 2);
-			height: calc(100% + 5px * 2);
+			top: calc(-1 * #{rem(5px)});
+			left: calc(-1 * #{rem(10px)});
+			width: calc(100% + #{rem(10px)} * 2);
+			height: calc(100% + #{rem(5px)} * 2);
 			background-blend-mode: none;
 			&:nth-child(2) {
 				background-color: transparent;
@@ -242,7 +246,7 @@ main{
 				animation-name: glitch-anim-3;
 			}
 			&:nth-child(5) {
-				background-color: #af4949;
+				background-color: $color-wine;
 				background-blend-mode: overlay;
 				animation-name: glitch-anim-flash;
 			}
@@ -257,7 +261,7 @@ main{
 	}
 	// poster
 	&.card-type-2{
-		// border-color: #000;
+		border-width: 0;
 		.bg{
 			position: absolute;
 			top: 0;
@@ -269,7 +273,7 @@ main{
 		.caption{
 			position: absolute;
 			z-index: 1;
-			padding: 15px;
+			padding: rem(18px);
 			left: 0;
 			bottom: 0;
 			right: 0;
@@ -280,16 +284,45 @@ main{
 			display: flex;
 			flex-direction: column;
 			justify-content: flex-end;
-			transition: all 350ms ease;
+			transition: all 400ms cubic-bezier(.74,.01,.24,1);
 		}
-		&:hover .caption{
-			opacity: 1;
-			visibility: visible;
+		.number{
+			transform: scale(.5);
+			opacity: 0;
+			visibility: hidden;
+			transition: all 400ms cubic-bezier(.74,.01,.24,1) 200ms;
+		}
+		.caption *{
+			opacity: 0;
+			visibility: hidden;
+			transform: translateX(15%);
+			transition: all 400ms cubic-bezier(.74,.01,.24,1) 100ms;
+			@for $i from 1 through 5 {
+				&:nth-child(#{$i}) {
+					transition-delay: #{$i*100}ms;
+				}
+			}
+		}
+		&:hover{
+			.number{
+				transform: scale(1);
+			}
+			.number,
+			.caption, 
+			.caption *{
+				opacity: 1;
+				visibility: visible;
+			}
+			.caption *{
+				transform: translateX(0);
+			}
 		}
 	}
+	// dead
 	&.card-type-3{
+		border: $border-card solid #9b9bb7;
 		.inset{
-			// background-image: url(../img/card-bg-3.png);
+			background-image: url(../img/bg/card-bg-3.jpg)
 		}
 	}
 }
