--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -241,3 +241,11 @@
 		}
 	}
 }
+@keyframes flicker{
+	$steps:20;
+	@for $i from 0 through $steps{
+		#{percentage($i*(1/$steps))}{
+			opacity:random();
+		}
+	}
+}
