--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -249,3 +249,11 @@
 		}
 	}
 }
+@keyframes flicker-2{
+	$steps:10;
+	@for $i from 0 through $steps{
+		#{percentage($i*(1/$steps))}{
+			opacity:random();
+		}
+	}
+}
