--- a/scss/main.scss
+++ b/scss/main.scss
@@ -327,7 +327,7 @@ main{
 			&::after{
 				content: "";
 				display: block;
-				animation: flicker 0.05s infinite;
+				animation: flicker-2 .15s infinite;
 				position: absolute;
 				background-color: rgba(0, 0, 0, 0.5);
 				top: 0;
@@ -357,7 +357,7 @@ main{
 				opacity: 0;
 				z-index: 2;
 				pointer-events: none;
-				animation: flicker 0.25s infinite;
+				animation: flicker 0.15s infinite;
 			}
 			&::before{
 				content: " ";
